# JsonTUI

./: CMakeLists.txt  Readme.md  hex.hex
Example/: Example.json  Example2.json  Example3.json  Example4.json  Example5.json
Test/: TestFileCheck.cpp  TestScreen.cpp  test.cpp
include/: JsonRenderer.h  Navy.h  Table.h  Vert.h
src/: Navy.cpp  Table.cpp  Vert.cpp  main.cpp  table_class.cpp
